--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                                 <a href="/alarm" class="dropdown-item">{{'alarm'|load_lang}} ({{imp[2][8]}})</a>
                                 <a href="/watch_list" class="dropdown-item">{{'watchlist'|load_lang}}</a>
                                 <a href="/star_doc" class="dropdown-item">{{'star_doc'|load_lang}}</a>
+                                <div class="dropdown-divider"></div>
                                 <a href="/logout" class="dropdown-item">{{'logout'|load_lang}}</a>
                             {% else %}
                                 <a href="/login" class="dropdown-item">{{'login'|load_lang}}</a>
