--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
         {% else %}
             <title>{{imp[0]}} - {{imp[1][0]}}</title>
         {% endif %}
-        <link rel="stylesheet" href="/views/liberty/css/font-awesome/css/font-awesome.min.css?ver=1">
-        <link rel="stylesheet" href="/views/liberty/css/bootstrap.min.css?ver=1">
-        <link rel="stylesheet" href="/views/liberty/css/default.css?ver=2">
-        <link rel="stylesheet" href="/views/liberty/css/default_mobile.css?ver=1">
-        <link rel="stylesheet" href="/views/liberty/css/jquery-ui.min.css?ver=1">
+        <link rel="stylesheet" href="/views/liberty/css/font-awesome/css/font-awesome.min.css.cache_v1">
+        <link rel="stylesheet" href="/views/liberty/css/bootstrap.min.css.cache_v1">
+        <link rel="stylesheet" href="/views/liberty/css/default.css.cache_v2">
+        <link rel="stylesheet" href="/views/liberty/css/default_mobile.css.cache_v1">
+        <link rel="stylesheet" href="/views/liberty/css/jquery-ui.min.css.cache_v1">
         {{imp[3][3]|safe}}
-        <link rel="stylesheet" href="/views/liberty/css/style.css?ver=10">
+        <link rel="stylesheet" href="/views/liberty/css/style.css.cache_v10">
         {% if request.cookies.get('main_css_darkmode', '') == '1' %}
-            <link rel="stylesheet" href="/views/main_css/css/sub/dark.css?ver=4">
-            <link rel="stylesheet" href="/views/liberty/css/dark.css?ver=4">
+            <link rel="stylesheet" href="/views/main_css/css/sub/dark.css.cache_v4">
+            <link rel="stylesheet" href="/views/liberty/css/dark.css.cache_v4">
         {% endif %}
         <link href="https://fonts.googleapis.com/css?family=Dokdo|Gaegu|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Noto+Serif+KR|Noto+Sans+KR&amp;display=swap&amp;subset=korean" rel="stylesheet">
         <link rel="shortcut icon" href="/views/main_css/file/favicon.ico">
         <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js" integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="/views/liberty/js/layout.js?ver=3"></script>
-        <script type="text/javascript" src="/views/liberty/js/skin_set.js?ver=6"></script>
+        <script type="text/javascript" src="/views/liberty/js/layout.js.cache_v3"></script>
+        <script type="text/javascript" src="/views/liberty/js/skin_set.js.cache_v6"></script>
         {{imp[1][5]|safe}}
         {{imp[2][3]|safe}}
         {% if imp[3][0] != 0 %}
