최신 오픈나무 설계안 반영

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{'language_tag'|load_lang}}">
     <head>
         <meta charset="utf-8">
         {% if imp[3][0] != 0 %}
@@ -15,7 +15,7 @@
         {{imp[3][3]|safe}}
         <link rel="stylesheet" href="/views/liberty/css/style.css.cache_v10">
         {% if request.cookies.get('main_css_darkmode', '') == '1' %}
-            <link rel="stylesheet" href="/views/main_css/css/sub/dark.css.cache_v4">
+            {{imp[3][5]|safe}}
             <link rel="stylesheet" href="/views/liberty/css/dark.css.cache_v4">
         {% endif %}
         <link href="https://fonts.googleapis.com/css?family=Dokdo|Gaegu|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Noto+Serif+KR|Noto+Sans+KR&amp;display=swap&amp;subset=korean" rel="stylesheet">
@@ -172,7 +172,7 @@
                         </div>
                         <div class="live-recent-footer">
                             <a id="liberty_recent_link" href="/recent_changes" title="{{'recent_change'|load_lang}}">
-                                <span class="label label-info">More</span>
+                                <span class="label label-info">+</span>
                             </a>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                         {{imp[1][1]|safe}}
                     </p>
                     <div id="powered">
-                        <a href="https://github.com/2DU/openNAMU"><img src="/views/main_css/file/s_logo.png" width="100px"></a>
+                        <a href="https://github.com/openNAMU/openNAMU"><img src="/views/main_css/file/s_logo.png" width="100px"></a>
                         <a href="https://librewiki.net/"><img src="/views/liberty/img/designedbylibre.png" width="100px"></a>
                     </div>
                 </div>
