--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
         {% else %}
             <title>{{imp[0]}} - {{imp[1][0]}}</title>
         {% endif %}
-        <link rel="stylesheet" href="/views/liberty/css/font-awesome/css/font-awesome.min.css.cache_v1">
-        <link rel="stylesheet" href="/views/liberty/css/bootstrap.min.css.cache_v1">
-        <link rel="stylesheet" href="/views/liberty/css/default.css.cache_v2">
-        <link rel="stylesheet" href="/views/liberty/css/default_mobile.css.cache_v1">
-        <link rel="stylesheet" href="/views/liberty/css/jquery-ui.min.css.cache_v1">
+        <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css" integrity="sha512-DD6Lm09YDHzhW3K4eLJ9Y7sFrBwtCF+KuSWOLYFqKsZ6RX4ifCu9vWqM4R+Uy++aBWe6wD4csgQRzGKp5vP6tg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
+        <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.3/themes/base/jquery-ui.min.css" integrity="sha512-8PjjnSP8Bw/WNPxF6wkklW6qlQJdWJc/3w/ZQPvZ/1bjVDkrrSqLe9mfPYrMxtnzsXFPc434+u4FHLnLjXTSsg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/views/liberty/css/default.css.cache_v2">
+        <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/views/liberty/css/default_mobile.css.cache_v1">
         {{imp[3][3]|safe}}
-        <link rel="stylesheet" href="/views/liberty/css/style.css.cache_v10">
+        <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/views/liberty/css/style.css.cache_v10">
         {% if request.cookies.get('main_css_darkmode', '') == '1' %}
             {{imp[3][5]|safe}}
-            <link rel="stylesheet" href="/views/liberty/css/dark.css.cache_v4">
+            <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/views/liberty/css/dark.css.cache_v5">
         {% endif %}
-        <link href="https://fonts.googleapis.com/css?family=Dokdo|Gaegu|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Noto+Serif+KR|Noto+Sans+KR&amp;display=swap&amp;subset=korean" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Dokdo|Gaegu|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Noto+Serif+KR|Noto+Sans+KR&amp;display=swap&amp;subset=korean" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
         <link rel="shortcut icon" href="/views/main_css/file/favicon.ico">
         
         <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
