--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{'language_tag'|load_lang}}">
     <head>
+        <script src="/views/liberty/js/skin_set_do.js.cache_v1"></script>
+
         <meta charset="utf-8">
         {% if imp[3][0] != 0 %}
             <title>{{imp[0]}} {{imp[3][0]}} - {{imp[1][0]}}</title>
@@ -27,7 +29,7 @@
         <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
         
         <script defer src="/views/liberty/js/layout.js.cache_v3"></script>
-        <script defer src="/views/liberty/js/skin_set.js.cache_v6"></script>
+        <script defer src="/views/liberty/js/skin_set.js.cache_v7"></script>
         {{imp[1][5]|safe}}
         {{imp[2][3]|safe}}
         {% if imp[3][0] != 0 %}
